basically runnin now

--- a/src/app/touchscreen/touchscreen.component.html
+++ b/src/app/touchscreen/touchscreen.component.html
@@ -17,6 +17,6 @@
 
   <div [@menuState]="state" class="modal-container-right"
        [ngClass]="isNoMenus ? 'modal-container-right-nomenu' : ''">
-    <div class="reset-button"><a href="#" (click)="map.reset()" i18n>Reset map</a></div>
+    <div class="reset-button"><a href="#" (click)="mapComponent.reset()" i18n>Reset map</a></div>
   </div>
 </div>
